adicionar links para as gravações das aulas 1 e 2. corrigir um erro de digitação no slide do summarise na aula 2 de manipulação.

--- a/index.qmd
+++ b/index.qmd
@@ -133,10 +133,12 @@ rodar uma metanálise com R.
 * [Slides da Aula 1: R e RStudio](slides/1_r_e_rstudio/slides_r_e_rstudio.html)
   - [Código para gerar os slides da Aula 1: R e RStudio](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/1_r_rstudio/slides_r_e_rstudio.qmd)
   - [R Script da Aula 1: R e RStudio](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/1_r_e_rstudio/script_r_e_rstudio.R)
+  - [Gravação da Aula 1: R e RStudio](https://youtu.be/MhysI-QdtZY)
 
 * [Slides da Aula 2: Manipulação de dados](slides/2_manipulacao/slides_manipulacao.html)
   - [Código para gerar os slides da Aula 2: Manipulação de dados](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/2_manipulacao/slides_manipulacao.qmd)
   - [R Script da Aula 2: Manipulação de dados](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/2_manipulacao/script_manipulacao.R)
+  - [Gravação da Aula 2: Manipulação de dados](https://youtu.be/EpWgpzLWxJ8)
   
 * [Slides da Aula 3: Visualização de dados](slides/3_visualizacao/slides_visualizacao.html)
   - [Código para gerar os slides da Aula 3: Visualização de dados](https://raw.githubusercontent.com/brunomontezano/r-workshop/main/slides/3_visualizacao/slides_visualizacao.qmd)
