Nomear chunk que carrego pacote dados e chamo a base `questionario`.

--- a/slides/2_manipulacao/slides_manipulacao.qmd
+++ b/slides/2_manipulacao/slides_manipulacao.qmd
@@ -357,7 +357,7 @@ atribuição sempre no topo.
 
 `questionario` é uma base de dados disponibilizada no pacote `dados`.
 
-```{r}
+```{r carregar-questionario}
 # install.packages("dados")
 library(dados)
 
