--- a/perguntas_frequentes.qmd
+++ b/perguntas_frequentes.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Sobre o curso"
+title: "Perguntas frequentes"
 lang: pt-br
 ---
 
@@ -70,3 +70,10 @@ Segue abaixo o cronograma de aulas do curso:
 Em relação aos laboratórios, eles acontecerão no sábado da semana
 da aula correspondente. Assim como as aulas, os laboratórios serão
 gravados e disponibilizados no site do curso.
+
+## O curso possui algum pré-requisito?
+
+O curso não possui pré-requisitos obrigatórios. No entanto, é recomendável que
+os participantes tenham conhecimento básico em estatística e experiência prévia
+em análise de dados. Além disso, é importante que os participantes possuam
+conhecimento básico em informática.
